Side nav z-index fix

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -893,6 +893,7 @@ a:hover{
 	/*background: black;*/
 	font-size: .8em;
 	max-width: 1600px;
+	z-index: 12;
 	/*box-shadow: 0 0 30px black;*/
 }
 
